--- a/guio_mvp_react/src/components/AnimalCardList.css
+++ b/guio_mvp_react/src/components/AnimalCardList.css
@@ -5,3 +5,27 @@
   margin: 2em 0 0.5em;
   height: fit-content;
 }
+.container-fluid {
+  max-width: 2000px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+
+.card-text {
+  height: 3vw;
+}
+
+.card-title {
+  font-size: 30px;
+  font-weight: 600;
+  margin-left: 8px;
+}
+.card-text {
+  font-size: 20px;
+  font-weight: 300;
+  margin-left: 8px;
+}
