--- a/guio_mvp_react/src/components/AnimalCardList.css
+++ b/guio_mvp_react/src/components/AnimalCardList.css
@@ -5,14 +5,11 @@
   margin: 2em 0 0.5em;
   height: fit-content;
 }
-.container-fluid {
-  max-width: 2000px;
-}
 
 .card-img-top {
   width: 100%;
   height: 15vw;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .card-text {
